--- a/package.json
+++ b/package.json
@@ -2,29 +2,35 @@
   "name": "lamecodashboard",
   "version": "1.0.0",
   "description": "Lameco dashboard system",
+  "main": "server.js",
   "author": "Max Altena <Max@MaxAltena.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MaxAltena/LamecoDashboard.git"
   },
-  "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
-    "mongoose": "^5.3.0"
+    "gravatar": "^1.6.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
   },
   "scripts": {
-    "install-all": "npm install && npm install --prefix client",
-    "server-install": "npm install",
-    "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
+    "install-server": "npm install",
+    "install-client": "npm install --prefix client",
+    "install-all": "npm install && npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   }
