update for heroku

--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "install-client": "npm install --prefix client",
     "install-all": "npm install && npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run heroku-build --prefix client"
   }
 }
