--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm-run build-css && react-scripts build",
+    "heroku-build": "react-script build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
