--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "node-sass-chokidar": "^1.3.4",
+    "nodemailer": "^4.6.8",
     "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
