--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "url": "git+https://github.com/MaxAltena/LamecoDashboard.git"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "express": "^4.16.4",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.3.5",
+    "node-sass-chokidar": "^1.3.4",
     "nodemailer": "^4.6.8",
+    "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react-scripts": "^2.0.5",
