--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "react": "^16.6.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.0",
     "react-dropdown": "^1.6.2",
     "react-grid-layout": "^0.16.6",
