--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "react": "^16.6.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.1",
-    "react-dropdown": "^1.6.2",
     "react-grid-layout": "^0.16.6",
     "react-live-clock": "^2.0.3",
     "react-moment": "^0.8.3",
@@ -30,7 +29,7 @@
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive --use-polling --polling-interval 1000",
-    "install": "npm install --save axios classnames jwt-decode moment react react-copy-to-clipboard react-dom react-dropdown react-grid-layout react-live-clock react-moment react-open-weather react-redux react-router-dom react-scripts react-select react-transition-group redux redux-thunk && npm install --save--dev node-sass-chokidar npm-run-all",
+    "install": "npm install --save axios classnames jwt-decode moment react react-copy-to-clipboard react-dom react-grid-layout react-live-clock react-moment react-open-weather react-redux react-router-dom react-scripts react-select react-transition-group redux redux-thunk && npm install --save--dev node-sass-chokidar npm-run-all",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm-run-all build-css && react-scripts build",
